After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697816 - Coverity fixes
Coverity fixes
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2013-04-11 16:04 UTC by Jasper St. Pierre (not reading bugmail)
Modified: 2013-05-02 21:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
arg: Remove some dead code (784 bytes, patch)
2013-04-11 16:04 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
function: Fix some baaad integer signedness issues (1.25 KB, patch)
2013-04-11 16:04 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review
cairo-pattern: Remove some dead code (1.03 KB, patch)
2013-04-11 16:04 UTC, Jasper St. Pierre (not reading bugmail)
committed Details | Review

Description Jasper St. Pierre (not reading bugmail) 2013-04-11 16:04:37 UTC
Spotted by Coverity, etc.
Comment 1 Jasper St. Pierre (not reading bugmail) 2013-04-11 16:04:39 UTC
Created attachment 241268 [details] [review]
arg: Remove some dead code

Spotted by Coverity.
Comment 2 Jasper St. Pierre (not reading bugmail) 2013-04-11 16:04:42 UTC
Created attachment 241269 [details] [review]
function: Fix some baaad integer signedness issues

As these variables indicate -1 for "non-existant", they can't be
unsigned.
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-04-11 16:04:44 UTC
Created attachment 241270 [details] [review]
cairo-pattern: Remove some dead code

Spotted by Coverity
Comment 4 Colin Walters 2013-04-11 16:21:04 UTC
Review of attachment 241268 [details] [review]:

That's pretty clever that it detects that.  Yes.
Comment 5 Colin Walters 2013-04-11 16:23:44 UTC
Review of attachment 241269 [details] [review]:

Ouch.  That is bad, but why int8 instead of int, which is what the functions actually return?

Granted we can't really have functions with > 256 arguments, but still
Comment 6 Colin Walters 2013-04-11 16:23:57 UTC
Review of attachment 241270 [details] [review]:

Sure.
Comment 7 Jasper St. Pierre (not reading bugmail) 2013-05-02 21:25:50 UTC
Attachment 241268 [details] pushed as 3554344 - arg: Remove some dead code
Attachment 241269 [details] pushed as db487c7 - function: Fix some baaad integer signedness issues
Attachment 241270 [details] pushed as 16a1345 - cairo-pattern: Remove some dead code