arg: Remove some dead code

Spotted by Coverity.

https://bugzilla.gnome.org/show_bug.cgi?id=697816